--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 <header></header>
 <section class="banner">
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4">Album example
+        </h1>
+        <p class="lead">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.
+        </p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <div>
+            <button class="btn btn-primary">Main call to action</button>
+            <button class="btn btn-secondary">Secondary action</button>
+        </div>
       </div>
 </section>
 <section class="products"></section>
