add footer de tao xung dot

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer class="text-center">
+        <p>Blog tamplate built for Bootstrap by @mdo.</p>
+        <p><a href="#">Back to House</a></p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
