--- a/index.html
+++ b/index.html
@@ -54,11 +54,8 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.
                         </p>
-                        <a class="btn btn-primary" href="#" role="button">Link</a>
-                        <button class="btn btn-primary" type="submit">Button</button>
-                        <input class="btn btn-primary" type="button" value="Input">
-                        <input class="btn btn-primary" type="submit" value="Submit">
-                        <input class="btn btn-primary" type="reset" value="Reset">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                        <button type="button" class="btn btn-secondary btn-lg">Large button</button>
                     </div>
                 </div>
             </div>
