--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.
                         </p>
-                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
-                        <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+                        <button type="button" class="btn btn-primary btn-lg">View Error</button>
+                        <button type="button" class="btn btn-secondary btn-lg">Edit</button>
                     </div>
                 </div>
             </div>
